Network/Infra/Redirector/Deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redirect
    app.kubernetes.io/instance: redirect-0.10.1
    app.kubernetes.io/name: redirect
    app.kubernetes.io/version: 0.10.1
    language: random
    release: ingress-redir
    releaseRevision: '1'
  name: ingress-redir-redirect
  namespace: core-prod
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: ingress-redir
      app.kubernetes.io/name: redirect
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        prometheus.io/port: '7133'
        prometheus.io/scrape: 'true'
      creationTimestamp: null
      labels:
        app: redirect
        app.kubernetes.io/instance: ingress-redir
        app.kubernetes.io/name: redirect
        app.kubernetes.io/version: 0.10.1
        appRevision: redirect___1
        chart: redirect-0.10.1
        helm.sh/chart: redirect-0.10.1
        heritage: Helm
        language: random
        release: ingress-redir
        releaseRevision: '1'
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: appRevision
                    operator: In
                    values:
                      - redirect___1
              topologyKey: kubernetes.io/hostname
      containers:
        - image: 'ghcr.io/wyrihaximusnet/redirect:random'
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: http-metrics
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: redirect
          ports:
            - containerPort: 7132
              name: http
              protocol: TCP
            - containerPort: 7133
              name: http-metrics
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: http-metrics
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 50m
              memory: 64Mi
            requests:
              cpu: 50m
              memory: 64Mi
          securityContext: {}
          startupProbe:
            failureThreshold: 33
            httpGet:
              path: /ping
              port: http-metrics
              scheme: HTTP
            periodSeconds: 1
            successThreshold: 1
            timeoutSeconds: 1
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /etc/redirect/
              name: ingress-redir-redirect-volume
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: ingress-redir-redirect
      serviceAccountName: ingress-redir-redirect
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            defaultMode: 420
            name: ingress-redir-redirect
          name: ingress-redir-redirect-volume
