Network/Infra/Redirector/Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redirect
    app.kubernetes.io/instance: redirect-0.10.1
    app.kubernetes.io/name: redirect
    app.kubernetes.io/version: 0.10.1
    appRevision: redirect___1
  name: ingress-redir-redirect
  namespace: core-prod
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 7132
      protocol: TCP
      targetPort: 7132
    - name: http-metrics
      port: 7133
      protocol: TCP
      targetPort: 7133
  selector:
    app.kubernetes.io/instance: ingress-redir
    app.kubernetes.io/name: redirect
  sessionAffinity: None
  type: ClusterIP
