Network/Infra/Redirector/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
  name: ingress-redir-redirect
spec:
  ingressClassName: traefik-core
  rules:
    - host: central.maven.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingress-redir-redirect
                port:
                  name: http
